--- a/readme
+++ b/readme
@@ -4,6 +4,4 @@ Steps to run the demo:
 
 2) npm install -g @bazel/ibazel
 
-DEV Envrionment:
-
-npm run serve-dev (open a browser and navigate to localhost:9000)
+npm run serve (open a browser and navigate to localhost:9000)
