--- a/readme
+++ b/readme
@@ -4,4 +4,4 @@ Steps to run the demo:
 
 2) npm install -g @bazel/ibazel
 
-npm run serve (open a browser and navigate to localhost:9000)
+npm run serve (a browser opens up on localhost:3000)
