--- a/readme
+++ b/readme
@@ -5,3 +5,6 @@ Steps to run the demo:
 Build the sample: npm run build
 
 Run the sample: npm run serve
+
+Blog Post:
+http://www.syntaxsuccess.com/viewarticle/angular-lazy-loading-with-bazel-and-rollup
